# CogniCore

./: .gitignore  Features.txt  PROJECT.md  Plan.txt  README.md
config/: cognition.example.yaml
docs/: COGNITION_ENGINE.md  FEATURE_MAP.md  GETTING_STARTED.md  HERMES_TIPS.md  INTEGRATION.md  PLUGIN.md  SOCIAL_PREVIEW.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  VISION.md
examples/hermes-dogfood/: README.md  config.yaml.snippet
examples/xss-finder/: README.md  pyproject.toml
examples/xss-finder/xss_finder/: __init__.py  cli.py  config.py  payloads.py  scanner.py  scope.py
scripts/: clone-repos-https.sh  install-hermes-cognition.ps1  install-hermes-cognition.sh
